--- a/Site/Public/css/Look.css
+++ b/Site/Public/css/Look.css
@@ -3,6 +3,7 @@
 * {
     margin: 0%;
     padding: 0%;
+    box-sizing: border-box;
 }
 
 body {
@@ -82,15 +83,58 @@ gap: 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: start;
     height: 28rem;
     width: 23rem;
-    gap: 0.8rem;
     margin-left: 10rem;
     background-color: #F0B49E;
     color: #FFFFFF;
     border-radius: 1rem;
 }
 
+.container-slider {
+    display: flex;
+    width: 100%;
+    min-height: 40vh;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.container-imagem {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 15rem;
+}
+
+.slider {
+    position: absolute;
+    width: 100%;
+    border-radius: 0.3rem;
+    transition: opacity .2s;
+    opacity: 0;
+}
+
+.on {
+    opacity: 1;
+}
+
+#prev-button, #next-button {
+    width: 5rem;
+    height: 5rem;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+#prev-button img, #next-button img {
+    width: 100%;
+    height: 100%;
+}
+#prev-button {
+    transform: rotate(180deg);
+}
 
 h2{
     color: #EB6077;
