--- a/Site/Public/css/Look.css
+++ b/Site/Public/css/Look.css
@@ -54,12 +54,38 @@ input {
     flex-direction: row;
 }
 
-.postagem{
+.postagem1{
     display: flex;
     flex-direction: column;
     background-color: #F0B49E;
     color: #FFFFFF;
-    height: 28rem;
+    height: 40rem;
+    width: 32rem;
+    margin-left: 9rem;
+    margin-top: 5rem;
+    align-items: center;
+    border-radius: 1rem;
+}
+
+.postagem2{
+    display: flex;
+    flex-direction: column;
+    background-color: #F0B49E;
+    color: #FFFFFF;
+    height: 27rem;
+    width: 32rem;
+    margin-left: 9rem;
+    margin-top: 5rem;
+    align-items: center;
+    border-radius: 1rem;
+}
+
+.postagem3{
+    display: flex;
+    flex-direction: column;
+    background-color: #F0B49E;
+    color: #FFFFFF;
+    height: 29rem;
     width: 32rem;
     margin-left: 9rem;
     margin-top: 5rem;
@@ -70,7 +96,28 @@ input {
     display: flex;
     flex-direction: column;
 }
+p{
+    width: 25rem;
+}
+p2{
+    width: 15rem;
+}
+.conteudo-site-titulo {
+    color: #eb6077;
+}
 
+
+button {
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 0.3rem;
+    padding: 8px;
+    font-size: 1.1rem;
+    color: #EB6077;
+    cursor: pointer;
+}
 
 
 .inspiracoes{
@@ -134,6 +181,10 @@ gap: 3rem;
 }
 #prev-button {
     transform: rotate(180deg);
+}
+
+h3{
+    color: #EB6077;
 }
 
 h2{
