--- a/Site/Public/css/Makeup.css
+++ b/Site/Public/css/Makeup.css
@@ -3,7 +3,6 @@
 * {
     margin: 0%;
     padding: 0%;
-    box-sizing: border-box;
 }
 
 body {
@@ -54,38 +53,12 @@ input {
     flex-direction: row;
 }
 
-.postagem1{
+.postagem{
     display: flex;
     flex-direction: column;
     background-color: #F0B49E;
     color: #FFFFFF;
-    height: 40rem;
-    width: 32rem;
-    margin-left: 9rem;
-    margin-top: 5rem;
-    align-items: center;
-    border-radius: 1rem;
-}
-
-.postagem2{
-    display: flex;
-    flex-direction: column;
-    background-color: #F0B49E;
-    color: #FFFFFF;
-    height: 27rem;
-    width: 32rem;
-    margin-left: 9rem;
-    margin-top: 5rem;
-    align-items: center;
-    border-radius: 1rem;
-}
-
-.postagem3{
-    display: flex;
-    flex-direction: column;
-    background-color: #F0B49E;
-    color: #FFFFFF;
-    height: 29rem;
+    height: 28rem;
     width: 32rem;
     margin-left: 9rem;
     margin-top: 5rem;
@@ -96,44 +69,21 @@ input {
     display: flex;
     flex-direction: column;
 }
-p{
-    width: 25rem;
-}
 
-p2{
-    width: 15rem;
-}
-.conteudo-site-titulo {
-    color: #eb6077;
-}
-
-
-button {
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-radius: 0.3rem;
-    padding: 8px;
-    font-size: 1.1rem;
-    color: #EB6077;
-    cursor: pointer;
-}
 
 
 .inspiracoes{
     display: flex;
 flex-direction: column;
-gap: 3rem;
 }
 
 .produto-desconto{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
     height: 28rem;
     width: 23rem;
+    gap: 0.8rem;
     margin-left: 10rem;
     background-color: #F0B49E;
     color: #FFFFFF;
@@ -183,11 +133,7 @@ gap: 3rem;
 #prev-button {
     transform: rotate(180deg);
 }
- 
 
-h3{
-    color: rgb(235, 96, 119);
-}
 
 h2{
     color: #EB6077;
